# posixfy-bridge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml  test.yml
src/: config.rs  error.rs  main.rs
src/api/: fs.rs  mod.rs  mounts.rs  watch.rs
src/auth/: middleware.rs
src/fs/: guard.rs  lock.rs  mod.rs  operations.rs  path.rs  watcher.rs
src/models/: mount.rs
tests/: api_test.rs
tests/common/: mod.rs
