[package]
name = "posixfy-bridge"
version = "0.2.1"
edition = "2021"

[lib]
name = "posixfy_bridge"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
rand = "0.9"

# Concurrency & streaming
dashmap = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["user", "fs", "process"] }

[dev-dependencies]
tempfile = "3"
http = "1"
http-body-util = "0.1"
rand = "0.9"
